# Impactor

./: Cargo.toml  Makefile
.github/workflows/: meta.yml
apps/plumeimpactor/: Cargo.toml
apps/plumeimpactor/src/screen/: package.rs
crates/plume_core/src/auth/account/: login.rs
locales/: de.toml  it.toml  pl.toml  vi.toml
package/linux/: dev.khcrysalis.PlumeImpactor.metainfo.xml
