[workspace]
resolver = "3"
members = [
    "apps/plumeimpactor",
    "apps/plumesign",
    "crates/plume_core",
    "crates/plume_gestalt", 
    "crates/plume_store",
    "crates/plume_utils",
]

[workspace.package]
edition = "2024"
version = "2.1.2"
authors = ["CLARATION <s03781614@icloud.com>"]
license = "MIT"
repository = "https://github.com/khcrysalis/plumestore"

# We use `opt-level = "s"` as it significantly reduces binary size.
# We could then use the `#[optimize(speed)]` attribute for spot optimizations.
# Unfortunately, that attribute currently doesn't work on intrinsics such as memset.
[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
# Application
idevice = { git = "https://github.com/PlumeImpactor/plume-idevice", rev = "5e350a", default-features = false, features = [
    "full",
    "ring",
] }
plist = "1.8.0"
# Errors
env_logger = "0.11.8"
log = "0.4.28"
thiserror = "2.0.16"
# Utils
uuid = "1.18.1"
futures = "0.3.31"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rustls = { version = "0.23.32", default-features = false, features = [
    "std",
    "tls12",
    "ring",
] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
